fix mediate layout

--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -16,32 +16,34 @@
 </head>
 
 <body>
-    <header class="header-wrapper">
-        <div class="header-area">
-            <div id="site-title">
-                <img src="./images/icon_heading-cat-hand.svg" alt="icon">
-                <p>滑石きたむら動物病院</p>
-            </div>
-            <nav class="pc">
-                <ul class="nav-list">
-                    <li><a href="#about-heading">ご挨拶</a></li>
-                    <li><a href="#about-contents">特徴</a></li>
-                    <li><a href="#service">サービス</a></li>
-                    <li><a href="#information">お知らせ</a></li>
-                    <li><a href="#access">アクセス</a></li>
-                    <li><a href="#inquiry">お問い合わせ</a></li>
-                </ul>
-            </nav>
-            <div class="no-pc">
-                <div class="nav-btn">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+    <header>
+        <div class="header-wrapper">
+            <div class="header-area">
+                <div id="site-title">
+                    <img src="./images/icon_heading-cat-hand.svg" alt="icon">
+                    <p>滑石きたむら動物病院</p>
+                </div>
+                <nav class="nav-pc">
+                    <ul class="nav-list">
+                        <li><a href="#about-heading">ご挨拶</a></li>
+                        <li><a href="#about-contents">特徴</a></li>
+                        <li><a href="#service">サービス</a></li>
+                        <li><a href="#information">お知らせ</a></li>
+                        <li><a href="#access">アクセス</a></li>
+                        <li><a href="#inquiry">お問い合わせ</a></li>
+                    </ul>
+                </nav>
+                <div class="nav-no-pc">
+                    <div class="nav-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
             </div>
         </div>
-        <nav class="no-pc nav-toggle-menu">
-            <ul class="nav-column-list full-size">
+        <nav class="nav-no-pc nav-toggle-menu">
+            <ul class="nav-column-list">
                 <li><a href="#about-heading">ご挨拶</a></li>
                 <li><a href="#about-contents">特徴</a></li>
                 <li><a href="#service">サービス</a></li>
@@ -51,7 +53,7 @@
             </ul>
         </nav>
     </header>
-    <div id="top" class="full-size">
+    <div id="top">
         <div class="top-message no-pc">
             <p>滑石きたむら動物病院は
                 <span class="primary-color">
@@ -60,41 +62,39 @@
             </p>
         </div>
     </div>
-    <section id="about" class="full-size">
-        <div class="wrapper">
-            <div id="about-heading">
-                <h1 class="primary-color">動物たちの健康で<br class="no-pc">幸せな生活をサポート</h1>
-                <p>
-                    当院は地域に密着し、皆さまの大切な家族の一員である動物たちのホームドクターを目指しています。
-                    <br>
-                    緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。
-                    <br>
-                    動物たちが健康で幸せな生活を送ることができるようサポートいたします。
-                    <img src="./images/icon_cat_hand-multi.svg" alt="icon">
-                </p>
-            </div>
-            <div id="about-contents" class="full-size bg-primary">
-                <div class="wrapper">
-                    <div class="content">
-                        <div id="content-image01" class="content-image"></div>
-                        <div class="content-text">
-                            <h2>経験豊富なスタッフが<br class="no-pc">24時間365日常駐</h2>
-                            <p>当院は24時間365日いつでも対応できるよう、豊富な経験を持つ獣医師や看護師が約50名体制で常駐しております。</p>
-                        </div>
+    <section id="about">
+        <div id="about-heading" class="wrapper">
+            <h1 class="primary-color">動物たちの健康で<br class="no-pc">幸せな生活をサポート</h1>
+            <p>
+                当院は地域に密着し、皆さまの大切な家族の一員である動物たちのホームドクターを目指しています。
+                <br>
+                緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。
+                <br>
+                動物たちが健康で幸せな生活を送ることができるようサポートいたします。
+                <img src="./images/icon_cat_hand-multi.svg" alt="icon">
+            </p>
+        </div>
+        <div id="about-contents" class="bg-primary">
+            <div class="wrapper">
+                <div class="content">
+                    <div id="content-image01" class="content-image"></div>
+                    <div class="content-text">
+                        <h2>経験豊富なスタッフが<br class="no-pc">24時間365日常駐</h2>
+                        <p>当院は24時間365日いつでも対応できるよう、豊富な経験を持つ獣医師や看護師が約50名体制で常駐しております。</p>
                     </div>
-                    <div class="content">
-                        <div id="content-image02" class="content-image"></div>
-                        <div class="content-text">
-                            <h2>エキゾチックアニマルも対応します</h2>
-                            <p>犬・猫だけではなく、ウサギやハムスター、爬虫類や両生類、鳥類などエキゾチックアニマルも対応しております。</p>
-                        </div>
+                </div>
+                <div class="content">
+                    <div id="content-image02" class="content-image"></div>
+                    <div class="content-text">
+                        <h2>エキゾチックアニマルも対応します</h2>
+                        <p>犬・猫だけではなく、ウサギやハムスター、爬虫類や両生類、鳥類などエキゾチックアニマルも対応しております。</p>
                     </div>
-                    <div class="content">
-                        <div id="content-image03" class="content-image"></div>
-                        <div class="content-text">
-                            <h2>ご自宅まで伺う往診も行っています</h2>
-                            <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも行っております。</p>
-                        </div>
+                </div>
+                <div class="content">
+                    <div id="content-image03" class="content-image"></div>
+                    <div class="content-text">
+                        <h2>ご自宅まで伺う往診も行っています</h2>
+                        <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも行っております。</p>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
             </div>
         </div>
     </section>
-    <section id="information" class="full-size bg-primary">
+    <section id="information" class="bg-primary">
         <div class="wrapper">
             <h1 class="icon-heading"> <img src="./images/icon_heading-cat-hand.svg" alt="icon">
 
@@ -190,7 +190,7 @@
             </div>
         </div>
     </section>
-    <section id="inquiry" class="bg-primary full-size">
+    <section id="inquiry" class="bg-primary">
         <div class="wrapper">
             <h1 class="icon-heading">
                 <img src="./images/icon_heading-cat-hand.svg" alt="icon">
@@ -218,7 +218,7 @@
         </div>
 
     </section>
-    <footer class="full-size">
+    <footer>
         <div class="wrapper">
             <nav>
                 <ul class="nav-list">
