fix loading toggle perf

--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-no-pc nav-toggle-menu">
+        <nav class="nav-no-pc nav-toggle-menu" style="display:none">
             <ul class="nav-column-list">
                 <li><a href="#about-heading">ご挨拶</a></li>
                 <li><a href="#about-contents">特徴</a></li>
