--- a/JQueryTraining/index.html
+++ b/JQueryTraining/index.html
@@ -6,11 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JQueryTraining</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <p class="target">テキスト</p>
-    <a href="" class="link">リンク</a>
+    <header>
+        <button id="hamburger-block" class="hamburger hamburger-trigger">
+            <span class="hamburger-line"></span>
+        </button>
+        <div class="header-menu">
+            <nav>
+                <ul>
+                    <li>メニュー1</li>
+                    <li>メニュー2</li>
+                    <li>メニュー3</li>
+                    <li>メニュー4</li>
+                    <li>メニュー5</li>
+                </ul>
+            </nav>
+        </div>
+        <div id="hamburger-bg" class="hamburger-bg hamburger-trigger"></div>
+    </header>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
