--- a/JQueryTraining/index.html
+++ b/JQueryTraining/index.html
@@ -27,6 +27,14 @@
         </div>
         <div id="hamburger-bg" class="hamburger-bg hamburger-trigger"></div>
     </header>
+    <button class="modal-open">OPEN</button>
+    <section class="modal-area">
+        <div class="modal-bg modal-close"></div>
+        <div class="modal-content">
+            <p>モーダルウィンドウの表示</p>
+            <div class="modal-cancel modal-close">✕</div>
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
