add tab not finished

--- a/JQueryTraining/index.html
+++ b/JQueryTraining/index.html
@@ -37,6 +37,30 @@
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/script.js"></script>
+    <section class="tab-area">
+        <ul class="tab-menu-block">
+            <li class="tab-menu">
+                <span id="tab01" class="tab-trigger active">タブ1</span>
+            </li>
+            <li class="tab-menu">
+                <span id="tab02" class="tab-trigger">タブ2</span>
+            </li>
+            <li class="tab-menu">
+                <span id="tab03" class="tab-trigger">タブ3</span>
+            </li>
+        </ul>
+        <div class="tab-content-area">
+            <div id="content-tab01" class="tab-content active">
+                <p>タブ1のコンテンツです</p>
+            </div>
+            <div id="content-tab02" class="tab-content">
+                <p>タブ2のコンテンツです</p>
+            </div>
+            <div id="content-tab03" class="tab-content">
+                <p>タブ3のコンテンツです</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
