fix mediate, miss

--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -54,7 +54,7 @@
         </nav>
     </header>
     <div id="top">
-        <div class="top-message no-pc">
+        <div class="top-message">
             <p>滑石きたむら動物病院は
                 <span class="primary-color">
                     大切な家族の<br>ホームドクターです
@@ -108,17 +108,26 @@
         </h1>
         <div id="service-contents" class="wrapper">
             <div class="service-content">
-                <div id="service-content-image01" class="service-content-image"></div>
+                <img src="./images/service_01.png" alt="往診サービス"
+                    srcset="./images/service_01.png 1x, ./images/service_01@2x.png 2x" class="pc">
+                <img src="./images/service_01_sp.png" alt="往診サービス"
+                    srcset="./images/service_01_sp.png 1x, ./images/service_01_sp@2x.png 2x" class="no-pc">
                 <h2>往診サービス</h2>
                 <p>シニアや介護などのペットのための自宅で診療するサービスです。</p>
             </div>
             <div class="service-content">
-                <div id="service-content-image02" class="service-content-image"></div>
+                <img src="./images/service_02.png" alt="ペットホテル"
+                    srcset="./images/service_02.png 1x, ./images/service_02@2x.png 2x" class="pc">
+                <img src="./images/service_02_sp.png" alt="ペットホテル"
+                    srcset="./images/service_02_sp.png 1x, ./images/service_02_sp@2x.png 2x" class="no-pc">
                 <h2>ペットホテル</h2>
                 <p>短時間の一時預かりから宿泊までご利用いただけるサービスです。</p>
             </div>
             <div class="service-content">
-                <div id="service-content-image03" class="service-content-image"></div>
+                <img src="./images/service_03.png" alt="トリミング"
+                    srcset="./images/service_03.png 1x, ./images/service_03@2x.png 2x" class="pc">
+                <img src="./images/service_03_sp.png" alt="トリミング"
+                    srcset="./images/service_03_sp.png 1x, ./images/service_03_sp@2x.png 2x" class="no-pc">
                 <h2>トリミング</h2>
                 <p>動物の体に負担をかけない技術や液剤を使用いたします。</p>
             </div>
