--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -77,21 +77,36 @@
         <div id="about-contents" class="bg-primary">
             <div class="wrapper">
                 <div class="content">
-                    <div id="content-image01" class="content-image"></div>
+                    <div class="img-container">
+                        <img src="./images/about_01.png" alt="特徴01"
+                            srcset="./images/about_01.png 1x,./images/about_01@2x.png 2x" class="pc">
+                        <img src="./images/about_01_sp.png" alt="特徴01"
+                            srcset="./images/about_01_sp.png 1x,./images/about_01_sp@2x.png 2x" class="no-pc">
+                    </div>
                     <div class="content-text">
                         <h2>経験豊富なスタッフが<br class="no-pc">24時間365日常駐</h2>
                         <p>当院は24時間365日いつでも対応できるよう、豊富な経験を持つ獣医師や看護師が約50名体制で常駐しております。</p>
                     </div>
                 </div>
                 <div class="content">
-                    <div id="content-image02" class="content-image"></div>
+                    <div class="img-container">
+                        <img src="./images/about_02.png" alt="特徴02"
+                            srcset="./images/about_02.png 1x,./images/about_02@2x.png 2x" class="pc">
+                        <img src="./images/about_02_sp.png" alt="特徴02"
+                            srcset="./images/about_02_sp.png 1x,./images/about_02_sp@2x.png 2x" class="no-pc">
+                    </div>
                     <div class="content-text">
                         <h2>エキゾチックアニマルも対応します</h2>
                         <p>犬・猫だけではなく、ウサギやハムスター、爬虫類や両生類、鳥類などエキゾチックアニマルも対応しております。</p>
                     </div>
                 </div>
                 <div class="content">
-                    <div id="content-image03" class="content-image"></div>
+                    <div class="img-container">
+                        <img src="./images/about_03.png" alt="特徴03"
+                            srcset="./images/about_03.png 1x,./images/about_03@2x.png 2x" class="pc">
+                        <img src="./images/about_03_sp.png" alt="特徴03"
+                            srcset="./images/about_03_sp.png 1x,./images/about_03_sp@2x.png 2x" class="no-pc">
+                    </div>
                     <div class="content-text">
                         <h2>ご自宅まで伺う往診も行っています</h2>
                         <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも行っております。</p>
