--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -6,10 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>株式会社キタムラ建設興業</title>
+    <!-- css -->
+    <link rel="stylesheet" href="./css/ress.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+    <header>
+        <div id="site-title">株式会社北村建設興業</div>
+    </header>
+    <section id="top">トップ</section>
+    <section id="about">アバウト</section>
+    <section id="service">サービス</section>
+    <section id="works">ワークス</section>
+    <section id="news">ニュース</section>
+    <section id="company">会社</section>
+    <section id="contact">問い合わせ</section>
+    <footer>
+        フッター
+    </footer>
+    <!-- script -->
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
