--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -12,10 +12,41 @@
 </head>
 
 <body>
-    <header>
-        <div id="site-title">株式会社北村建設興業</div>
-    </header>
-    <section id="top">トップ</section>
+
+    <section id="top">
+        <header class="header-wrapper">
+            <div id="site-title">株式会社北村建設興業</div>
+            <div class="header-menu pc">
+                <nav>
+                    <ul>
+                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="#service">SERVICE</a></li>
+                        <li><a href="#works">WORKS</a></li>
+                        <li><a href="#news">NEWS</a></li>
+                        <li><a href="#company">COMPANY</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="hamburger no-pc hamburger-trigger">
+                <span></span>
+            </div>
+            <div class="hamburger-menu">
+                <nav>
+                    <ul>
+                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="#service">SERVICE</a></li>
+                        <li><a href="#works">WORKS</a></li>
+                        <li><a href="#news">NEWS</a></li>
+                        <li><a href="#company">COMPANY</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="hamburger-trigger hamburger-bg"></div>
+        <p>永遠も。<br class="no-pc">瞬間も。<br>あなたと共に。</p>
+    </section>
     <section id="about">アバウト</section>
     <section id="service">サービス</section>
     <section id="works">ワークス</section>
