fix to link sns icon

--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -257,10 +257,10 @@
             </nav>
             <p>©︎Copyright2021　滑石きたむら動物病院</p>
             <div class="sns-icon-list">
-                <img src="./images/icon_twitter.svg" alt="twitter">
-                <img src="./images/icon_facebook.svg" alt="facebook">
-                <img src="./images/icon_youtube.svg" alt="youtube">
-                <img src="./images/icon_instagram.svg" alt="instagram">
+                <a href="#"><img src="./images/icon_twitter.svg" alt="twitter"></a>
+                <a href="#"><img src="./images/icon_facebook.svg" alt="facebook"></a>
+                <a href="#"><img src="./images/icon_youtube.svg" alt="youtube"></a>
+                <a href="#"><img src="./images/icon_instagram.svg" alt="instagram"></a>
             </div>
         </div>
     </footer>
