--- a/AnimalHospital/index.html
+++ b/AnimalHospital/index.html
@@ -34,7 +34,7 @@
                     </ul>
                 </nav>
                 <div class="nav-no-pc">
-                    <div class="nav-btn">
+                    <div class="nav-btn nav-trigger">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -42,8 +42,8 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-no-pc nav-toggle-menu" style="display:none">
-            <ul class="nav-column-list">
+        <nav class="nav-no-pc nav-trigger">
+            <ul class="nav-column-list" style="display:none">
                 <li><a href="#about-heading">ご挨拶</a></li>
                 <li><a href="#about-contents">特徴</a></li>
                 <li><a href="#service">サービス</a></li>
