--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -54,20 +54,28 @@
         <div class="hamburger-trigger hamburger-bg"></div>
     </section>
     <section id="about">
-        <h1 class="wm-vl about-heading">伝統とイマを繋ぐ</h1>
-        <div class="about-message wm-vl">
-            <p>古来から伝わる伝統文化</p>
-            <p>昔からそこにある材料</p>
-            <p>その土地に長い間書けて</p>
-            <p>最適化してきた</p>
-            <p>たくさんのヒントを</p>
-            <p>イマを生きる私たちの</p>
-            <p>心地よさに取り入れ</p>
-            <p>新たな技術革新を</p>
-            <p>起こし続ける会社です</p>
+        <div class="about-flex">
+            <h1 class="wm-vl about-heading">伝統とイマを繋ぐ</h1>
+            <div class="about-message wm-vl">
+                <p>古来から伝わる伝統文化</p>
+                <p>昔からそこにある材料</p>
+                <p>その土地に長い間書けて</p>
+                <p>最適化してきた</p>
+                <p>たくさんのヒントを</p>
+                <p>イマを生きる私たちの</p>
+                <p>心地よさに取り入れ</p>
+                <p>新たな技術革新を</p>
+                <p>起こし続ける会社です</p>
+            </div>
         </div>
     </section>
-    <section id="service">サービス</section>
+    <section id="service" class="bg-primary">
+        <h1 class="section-title">SERVICE</h1>
+        <div class="service">
+            <img src="" alt="">
+            <div class="description"></div>
+        </div>
+    </section>
     <section id="works">ワークス</section>
     <section id="news">ニュース</section>
     <section id="company">会社</section>
