add sp all area

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -69,19 +69,316 @@
             </div>
         </div>
     </section>
-    <section id="service" class="bg-primary">
-        <h1 class="section-title">SERVICE</h1>
-        <div class="service">
-            <img src="" alt="">
-            <div class="description"></div>
+    <section id="service" class="bg-light-green">
+        <div class="wrapper">
+            <h1 class="section-title">SERVICE</h1>
+            <div class="service">
+                <div class="service-img">
+                    <img src="./images/SP_SERVICE_01.png"
+                        srcset="./images/SP_SERVICE_01.png 1x, ./images/SP_SERVICE_01@2x.png 2x" alt="静岡県U.I様自宅"
+                        class="no-pc service-img-obj">
+                    <img src="./images/SP_SERVICE_01.png"
+                        srcset="./images/PC_SERVICE_01.png 1x, ./images/PC_SERVICE_01@2x.png 2x" alt="静岡県U.I様自宅"
+                        class="pc service-img-obj">
+                    <p class="service-img-title">静岡県U.I様自宅</p>
+                </div>
+                <div class="service-description bg-green">
+                    <h2 class="service-description-heading">新築<br class="pc">（土地探し〜建築）</h2>
+                    <p class="service-description-detail">お客様にあった土地探しから<br>建築、施工までサポートいたします。<br>風水的観点からもご提案。</p>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-img">
+                    <img src="./images/SP_SERVICE_02.png"
+                        srcset="./images/SP_SERVICE_02.png 1x, ./images/SP_SERVICE_02@2x.png 2x" alt="静岡県U.I様自宅"
+                        class="no-pc service-img-obj">
+                    <img src="./images/SP_SERVICE_02.png"
+                        srcset="./images/PC_SERVICE_02.png 1x, ./images/PC_SERVICE_02@2x.png 2x" alt="静岡県U.I様自宅"
+                        class="pc service-img-obj">
+                    <p class="service-img-title">北海道富良野市ブックカフェ</p>
+                </div>
+                <div class="service-description bg-green">
+                    <h2 class="service-description-heading">リフォーム<br>リノベーション</h2>
+                    <p class="service-description-detail">温かみと雰囲気をそのままに<br>住み心地、使い心地を<br>追求しご提供いたします。</p>
+                </div>
+            </div>
+            <div class="service">
+                <div class="service-img">
+                    <img src="./images/SP_SERVICE_03.png"
+                        srcset="./images/SP_SERVICE_03.png 1x, ./images/SP_SERVICE_03@2x.png 2x" alt="静岡県U.I様自宅"
+                        class="no-pc service-img-obj">
+                    <img src="./images/SP_SERVICE_03.png"
+                        srcset="./images/PC_SERVICE_03.png 1x, ./images/PC_SERVICE_03@2x.png 2x" alt="静岡県U.I様自宅"
+                        class="pc service-img-obj">
+                    <p class="service-img-title">広島県竹原市</p>
+                </div>
+                <div class="service-description bg-green">
+                    <h2 class="service-description-heading">都市計画〜開発<br>公共施設</h2>
+                    <p class="service-description-detail">都市計画から都市開発まで<br>ご提案いたします。<br>公共施設もさらに居心地良く。</p>
+                </div>
+            </div>
         </div>
     </section>
-    <section id="works">ワークス</section>
-    <section id="news">ニュース</section>
-    <section id="company">会社</section>
-    <section id="contact">問い合わせ</section>
+    <section id="works">
+        <div class="wrapper">
+            <h1 class="section-title">WORKS</h1>
+            <h2 class="section-sub-title">施工事例</h2>
+            <div class="works">
+                <div class="work">
+                    <img src="./images/SP_WORKS_01.png" alt="【新築】長崎県T.O様自宅" class="work-img"
+                        srcset="./images/SP_WORKS_01.png 1x, ./images/SP_WORKS_01@2x.png 2x">
+                    <p class="work-img-description">【新築】長崎県T.O様自宅</p>
+                </div>
+                <div class="work">
+                    <img src="./images/SP_WORKS_02.png" alt="【リノベーション】京都府カトリック丹波教会" class="work-img"
+                        srcset="./images/SP_WORKS_02.png 1x, ./images/SP_WORKS_02@2x.png 2x">
+                    <p class="work-img-description">【リノベーション】<br>京都府カトリック丹波教会</p>
+                </div>
+                <div class="work">
+                    <img src="./images/SP_WORKS_03.png" alt="【新築】東京都A.F様自宅件事務所" class="work-img"
+                        srcset="./images/SP_WORKS_03.png 1x, ./images/SP_WORKS_03@2x.png 2x">
+                    <p class="work-img-description">【新築】<br>東京都A.F様自宅件事務所</p>
+                </div>
+                <div class="work">
+                    <img src="./images/SP_WORKS_04.png" alt="【都市開発】山形県銀山温泉協同組合" class="work-img"
+                        srcset="./images/SP_WORKS_04.png 1x, ./images/SP_WORKS_04@2x.png 2x">
+                    <p class="work-img-description">【都市開発】<br>山形県銀山温泉協同組合</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="news" class="bg-light-green">
+        <div class="wrapper">
+            <h1 class="section-title">NEWS</h1>
+            <div class="news-content">
+                <div class="news-content-info">
+                    <div class="news-header bg-green">お知らせ</div>
+                    <div class="news-row first-row">
+                        <div class="news-date">2022.02</div>
+                        <div class="news-text">公式Instagram、yotubeはじめました。</div>
+                    </div>
+                    <div class="news-row">
+                        <div class="news-date">2021.10</div>
+                        <div class="news-text">非住宅 木造建築フェアに出展します。</div>
+                    </div>
+                    <div class="news-row">
+                        <div class="news-date">2021.02</div>
+                        <div class="news-text">公式ホームページがリニューアルしました。</div>
+                    </div>
+                    <div class="news-footer">
+                        <p>more</p>
+                        <img src="./images/arrow_right.svg" alt="more">
+                    </div>
+                </div>
+                <div class="news-content-blog">
+                    <div class="news-header bg-green">ブログ</div>
+                    <div class="news-row first-row">
+                        <div class="news-date">2022.01</div>
+                        <div class="news-text">あけましておめでとうございます。〜会長から社員まで〜</div>
+                    </div>
+                    <div class="news-row">
+                        <div class="news-date">2021.06</div>
+                        <div class="news-text">【検証】土地と人に相性はあるのか？</div>
+                    </div>
+                    <div class="news-row">
+                        <div class="news-date">2021.04</div>
+                        <div class="news-text">弊社創業初の入社式が行われました。</div>
+                    </div>
+                    <div class="news-footer">
+                        <p>more</p>
+                        <img src="./images/arrow_right.svg" alt="more">
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section id="company">
+        <div class="wrapper">
+            <h1 class="section-title">COMPANY</h1>
+            <h2 class="section-sub-title">施工事例</h2>
+            <div class="company-contents">
+                <div class="access-map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3353.244602057616!2d129.8368533155074!3d32.81228338096132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356aad0ae40d2583%3A0xc715da862d399c4e!2z44CSODUyLTgwNjUg6ZW35bSO55yM6ZW35bSO5biC5qiq5bC-77yR5LiB55uu77yV4oiS77yT77yW!5e0!3m2!1sja!2sjp!4v1650590915516!5m2!1sja!2sjp"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="company-description bg-green">
+                    <h3 class="company-name">株式会社 北村建設興業</h3>
+                    <p class="company-address">
+                        〒852-8065<br>長崎県長崎市横尾1丁目5-36
+                    </p>
+                    <p class="company-phone-number">TEL <span class="strong">000-000-0000</span></p>
+                    <p class="company-email">Mail　info@kitamurarealestate.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="bg-light-green">
+        <div class="wrapper">
+            <h1 class="section-title">CONTACT</h1>
+            <h2 class="section-sub-title">お問い合わせ</h2>
+            <p class="contact-description">３営業日以内にメールにてご連絡いたします。*は入力必須項目となります。</p>
+            <form action="#" class="contact-form">
+                <div class="form-control">
+                    <label for="name">お名前 *</label>
+                    <input type="text" name="name" id="name" placeholder="例：北村太郎">
+                </div>
+                <div class="form-control-sex">
+                    <label for="sex">性別</label>
+                    <div class="radio-form">
+                        <input type="radio" name="sex" id="male" class="visually-hidden">
+                        <label for="male">男性</label>
+                        <input type="radio" name="sex" id="female" class="visually-hidden">
+                        <label for="female">女性</label>
+                    </div>
+                </div>
+                <div class="form-control">
+                    <label for="email">メールアドレス *</label>
+                    <input type="text" name="email" id="email" placeholder="例：aaaaaaaa@gmail.com">
+                </div>
+                <div class="form-control">
+                    <label for="type">問い合わせ種別</label>
+                    <select name="type" id="type">
+                        <option value="house">家づくりについて</option>
+                        <option value="reform">リフォームについて</option>
+                        <option value="development">都市計画・開発について</option>
+                    </select>
+                </div>
+                <div class="form-control">
+                    <label for="inquiry">内容 *</label>
+                    <textarea name="inquiry" id="inquiry"></textarea>
+                </div>
+                <div class="form-control">
+                    <label for="question">何を見て当社HPを知りましたか？ (複数回答可)　*</label>
+                    <div class="checkbox-form">
+                        <div class="checkbox-control">
+                            <input type="checkbox" name="internet" id="internet">
+                            <label for="internet">インターネット</label>
+                        </div>
+                        <div class="checkbox-control">
+                            <input type="checkbox" name="flyer" id="flyer">
+                            <label for="flyer">チラシ</label>
+                        </div>
+                        <div class="checkbox-control">
+                            <input type="checkbox" name="exhibition" id="exhibition">
+                            <label for="exhibition">住宅展示場</label>
+                        </div>
+                        <div class="checkbox-control">
+                            <input type="checkbox" name="signboard" id="signboard">
+                            <label for="signboard">看板</label>
+                        </div>
+                        <div class="checkbox-control">
+                            <input type="checkbox" name="sns" id="sns">
+                            <label for="sns">各種SNS</label>
+                        </div>
+                        <div class="checkbox-control">
+                            <input type="checkbox" name="introduction" id="introduction">
+                            <label for="introduction">紹介</label>
+                        </div>
+                        <div class="checkbox-control">
+                            <input type="checkbox" name="contingent" id="contingent">
+                            <label for="contingent">通りがかり</label>
+                        </div>
+                        <div class="checkbox-control">
+                            <input type="checkbox" name="other" id="other">
+                            <label for="other">その他</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-control">
+                    <label for="personal-information-protection">個人情報保護方針</label>
+                    <div class="personal-information-protection">
+                        <h4>個人情報取扱事業者の氏名又は名称(法24条1項1号)</h4>
+                        <p>株式会社 北村建設興業</p>
+                        <br>
+                        <h4>個人情報の取り扱い</h4>
+                        <p>弊社は、個人情報保護に関連する法令を遵守し、お客様からご提供いただく個人情報を、細心の注意を払って取り扱っております。このプライバシーポリシーでは、当社におけるお客様の個人情報の取扱いについてご説明しております。
+                        </p>
+
+                        <h4>個人情報の利用目的(法18条、15条)</h4>
+                        <p>弊社は建築物の設計、施工を主とした当社業務ならびにアフターサービスをさせていただく上で、お客様の個人情報を原則として次の利用目的の範囲内で利用させていただきます。なお、アンケート用紙・ウェブサイトの他のページ等で特に利用目的を定めている場合は、その利用目的を含みます。
+                        </p>
+
+                        <p>・お客様からご注文頂いた工事を適切に完成させるため及び物品の納品をさせて頂くため、お客様へ弊社が取扱う商品を積極的に提案する営業活動のため、商品及びサービスの提供に関する手続(融資・申請・保証・保険・登記など)の支援、取次ぎのため
+                            <br>・お客様に弊社が取扱う商品、企業活動、イベント等に関するお知らせをお届けするため (カタログ、ご提案資料、展示のご案内、各種刊行物など)
+                            <br>・見学会等へご来場のお客様へのご商談、ご来場日時の確認のため
+                            <br>・商品やサービスについてお客さまからいただいたご意見を活用するため
+                            <br>・商品のアフターサービス、メンテナンス等のためにお客さまと接触するため
+                            <br>・その他お客さまから寄せられたご意見、ご要望にお応えするため、及び弊社が取扱う商品、サービス等の向上を図るため
+                        </p>
+                        <h4>保有個人データ利用目的(法24条1項2号)</h4>
+                        <p>・当社が建築したお客様宅のアフターメンテナンスを行うため
+                            ・当社がお客様に提供するサービスにおいて利用するため
+                            ・お客様に特別なサービスや新しい商品などの情報を的確にお知らせするため
+                            ・お客様に合ったサービスを提供するため
+                            ・当社の建築した住宅の利用状況や利用環境などに関する調査を実施して客観的にお客様の満足度を把握するため
+                            ・必要に応じてお客様に連絡を行うため
+                            ・会計監査上の確認作業を行うため
+                        </p>
+                        <h4>個人情報の安全対策(法20条)</h4>
+                        <p>お客様の個人情報を安全に管理・運営するよう鋭意努力しており、個人情報への外部からの不正なアクセス、個人情報の紛失・毀損・破壊・改ざん・漏えい、社外への不正な流出などへの危険防止に対する合理的かつ適切な安全対策を行っています。また個人情報を取り扱う部門ごとに情報管理責任者を置き、個人情報の適切な管理に努めるとともに、情報セキュリティに関する規程を設けて社員への周知徹底を実施しています。
+                        </p>
+
+                        <h4>第三者への提供(法23条)</h4>
+                        <p>個人情報は、以下のいずれかに該当する場合を除いて、いかなる第三者にも開示・提供いたしません。</p>
+                        <p>・お客さまの同意がある場合。
+                            <br>・お客様個人を識別することができない状態で開示する場合。
+                            <br>・業務を円滑に進める等の理由で外部事業者に取扱いを委託する場合。(この場合には、十分な保護水準を備えている委託先を選定し、漏えいや再提供を防止するために契約により義務づける等の方法によって、適切な管理を実施します)
+                            <br>・法令等により開示を要求された場合
+                            <br>・人の生命、身体又は財産の保護のために必要であって、お客様の同意を得ることが困難である場合
+                            <br>・国の機関や地方公共団体又はその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって、お客様の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがある場合
+                        </p>
+
+                        <h4>個人情報の開示手続(法25条)</h4>
+                        <p>お客様本人の個人情報に関する保有データの開示請求があった場合には、ご本人であることを運転免許証・パスポート等の身分証明書で確認させていただいた上、本人確認が終了後、速やかに開示させていただきます。
+                        </p>
+
+                        <h4>個人情報の訂正等(法26条)</h4>
+                        <p>前項の開示手続きにより、弊社が保有する保有個人データ内容に事実と異なる記載がある場合には、訂正、変更又は削除の手続きを取らせて頂きます。</p>
+
+                        <h4>プライバシーポリシーに関するお問合せ先</h4>
+                        <p>弊社の個人情報の取扱いに関するお問合せは、下記までお問い合せください。</p>
+
+                        <p>社名 株式会社北村建設興業</p>
+                        <p>住所 長崎県長崎市横尾1丁目5-36</p>
+                        <p>電話 000-000-0000</p>
+                        <p>FAX 000-000-0000</p>
+                        <p>メールアドレス info@kitamurakensetu.com</p>
+                    </div>
+                </div>
+                <input type="submit" value="内容に同意して送信" class="btn bg-green">
+            </form>
+        </div>
+    </section>
     <footer>
-        フッター
+        <div class="wrapper">
+            <div class="company-name">
+                株式会社 北村建設興業
+            </div>
+            <nav class="footer-menu">
+                <ul>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#service">SERVICE</a></li>
+                    <li><a href="#works">WORKS</a></li>
+                    <li><a href="#news">NEWS</a></li>
+                    <li><a href="#company">COMPANY</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </nav>
+            <div class="sns-icon-list">
+                <a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a>
+                <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
+                <a href="#"><img src="./images/icon-youtube.svg" alt="youtube"></a>
+                <a href="#"><img src="./images/icon-instagram.svg" alt="instagram"></a>
+            </div>
+        </div>
+        <div class="copy-right bg-green">
+            <div class="wrapper">
+                ©︎Copyright2022<br>kitamurakensetukogyo
+            </div>
+        </div>
     </footer>
     <!-- script -->
     <script src="./js/jquery-3.6.0.min.js"></script>
